# i3-quick-bind

./: Cargo.toml  LICENSE  README.md
src/: main.rs
