[package]
name = "i3-quick-bind"
version = "0.1.0"
authors = ["Trevor Merrifield <trevorm42@gmail.com>"]
description = "Temporarily bind a shell command to a hotkey in i3-wm"
license = "MIT"
repository = "https://github.com/tmerr/i3-quick-bind"

[dependencies]
clap = "2.26.2"
colored = "1.5.3"

[dependencies.i3ipc]
version = "0.8.2"
